# jpeshop

./: .gitignore
backend/: pyproject.toml
backend/core/: settings.py
frontend/: app.vue  nuxt.config.ts  package.json
frontend/components/: Categories.vue  Header.vue  Hero.vue
frontend/components/Global/Footer/: index.vue
frontend/components/Global/Header/: index.vue
frontend/components/Header/: PrimaryNav.vue  SecondaryNav.vue  index.vue
frontend/components/Product/: Card.vue  Container.vue
frontend/layouts/: default.vue
frontend/pages/: index.vue
frontend/pages/legal/: privacy-policy.vue  return-and-refund.vue  terms-of-service.vue
